deploy/k8s/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poorbricks-ui
  namespace: airflow
spec:
  type: ClusterIP
  selector:
    app: poorbricks-ui
  ports:
    - name: http
      port: 3000
      targetPort: http
